Add countdown wrapper

--- a/index.html
+++ b/index.html
@@ -9,27 +9,29 @@
 <body>
     <div class="countdown-container">
         <img src="./assets/iphone.png" alt="Old iPhone">
-        <div class="countdown-title-container">
-            <h1 class="countdown-title">Old iPhone giveaway</h1>
-            <p class="countdown-date">Giveaway ends on <span id="countdown-date"></span></p>
-        </div>
-        <p class="countdown-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rerum. Cumque consequatur vel nemo quam mollitia neque harum asperiores, molestias illum assumenda commodi minus necessitatibus nulla omnis natus maxime perferendis!</p>
-        <div class="countdown-timer-container">
-            <div class="countdown-timer">
-                <p class="countdown-number" id="days">00</p>
-                <p class="countdown-text">days</p>
+        <div class="countdown-wrapper">
+            <div class="countdown-title-container">
+                <h1 class="countdown-title">Old iPhone giveaway</h1>
+                <p class="countdown-date">Giveaway ends on <span id="countdown-date"></span></p>
             </div>
-            <div class="countdown-timer">
-                <p class="countdown-number" id="hours">00</p>
-                <p class="countdown-text">hours</p>
-            </div>
-            <div class="countdown-timer">
-                <p class="countdown-number" id="minutes">00</p>
-                <p class="countdown-text">minutes</p>
-            </div>
-            <div class="countdown-timer">
-                <p class="countdown-number" id="seconds">00</p>
-                <p class="countdown-text">seconds</p>
+            <p class="countdown-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, rerum. Cumque consequatur vel nemo quam mollitia neque harum asperiores, molestias illum assumenda commodi minus necessitatibus nulla omnis natus maxime perferendis!</p>
+            <div class="countdown-timer-container">
+                <div class="countdown-timer">
+                    <p class="countdown-number" id="days">00</p>
+                    <p class="countdown-text">days</p>
+                </div>
+                <div class="countdown-timer">
+                    <p class="countdown-number" id="hours">00</p>
+                    <p class="countdown-text">hours</p>
+                </div>
+                <div class="countdown-timer">
+                    <p class="countdown-number" id="minutes">00</p>
+                    <p class="countdown-text">minutes</p>
+                </div>
+                <div class="countdown-timer">
+                    <p class="countdown-number" id="seconds">00</p>
+                    <p class="countdown-text">seconds</p>
+                </div>
             </div>
         </div>
     </div>
