Add iPhone image and image creadits.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="countdown-container">
-        <img src="./assets/iphone.png" alt="Old iPhone">
+        <img src="./assets/iphone.jpg" alt="Old iPhone">
         <div class="countdown-wrapper">
             <div class="countdown-title-container">
                 <h1 class="countdown-title">Old iPhone giveaway</h1>
